--- a/Shop_app/appsettings.json
+++ b/Shop_app/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-EK8GAKM;Database=aspnet-Shop_app-b11a2bdd-f85a-43cc-adaf-03bcf489b24b;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-EK8GAKM;Database=bv_212;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
