--- a/Shop_app/appsettings.json
+++ b/Shop_app/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "VN5RYYV79U28827C2KN4D4F57S4J78VK",
+    "Issuer": "https://localhost:7065",
+    "Audience": "https://localhost:7065",
+    "DurationInMinutes": 10
+  },
   "AllowedHosts": "*"
 }
