add controller Orders

--- a/Shop_app/appsettings.json
+++ b/Shop_app/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-EK8GAKM;Database=bv_212;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=PC_TEACHER\\SQLEXPRESS;Database=bv_212;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
